[package]
name = "vintage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86" }
env_logger = { version = "0.10.2" }
tokio = { version = "1.38.0" }
vintage_blockchain = { path = "../vintage_blockchain" }
vintage_msg = { path = "../vintage_msg" }
vintage_consensus = { path = "../vintage_consensus" }
vintage_network = { path = "../vintage_network" }
vintage_worker = { path = "../vintage_worker" }
