[package]
name = "vintage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86" }
async-trait = { version = "0.1.80" }
env_logger = { version = "0.11.3" }
log = { version = "0.4.21" }
rand = { version = "0.8.5" }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = { version = "0.9" }
serde_json = { version = "1.0.117" }
tokio = { version = "1.38.0" }
# vintage
vintage_proxy = { path = "../vintage_proxy" }
vintage_blockchain = { path = "../vintage_blockchain" }
vintage_consensus = { path = "../vintage_consensus" }
vintage_network = { path = "../vintage_network" }
vintage_msg = { path = "../vintage_msg" }
vintage_utils = { path = "../vintage_utils" }
