[package]
name = "vintage_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.79" }
hex = { version = "0.4.3" }
log = { version = "0.4.21" }
redb = { version = "1.5.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.111" }
sha2 = { version = "0.10.8" }
time = { version = "0.3.36" }
