[package]
name = "vintage_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86" }
log = { version = "0.4.21" }
redb = { version = "1.5.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117" }
sha2 = { version = "0.10.8" }
tokio = { version = "1.38.0"}
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
vintage_msg = { path = "../vintage_msg" }
vintage_utils = { path = "../vintage_utils" }
