[package]
name = "vintage_consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
overlord = "0.4"
anyhow = { version = "1.0.86" }
# vintage
vintage_msg = { path = "../vintage_msg" }
vintage_network = { path = "../vintage_network" }
vintage_blockchain = {path = "../vintage_blockchain"}
async-trait = "0.1"
bytes = { version = "1.1", features = ["serde"] }
creep = "0.2"
bincode = "1.3"
crossbeam-channel = "0.5"
hasher = { version = "0.1", features = ['hash-keccak'] }
hummer = "0.2"
lazy_static = "1.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"]  }