[package]
name = "vintage_msg"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.21" }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"]  }
uuid = { version = "1.8.0" }
# vintage
vintage_utils = { path = "../vintage_utils" }
overlord = {git = "https://github.com/eightfish-org/overlord.git"}
bytes = { version = "1.1", features = ["serde"] }
creep = "0.2"
bincode = "1.3"