[package]
name = "vintage_msg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86" }
async-trait = { version = "0.1.80" }
digest = { version = "0.10.7" }
log = { version = "0.4.21" }
sha2 = { version = "0.10.8" }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"]  }
# vintage
vintage_utils = { path = "../vintage_utils" }
overlord = {git = "https://github.com/eightfish-org/overlord.git"}
bytes = { version = "1.1", features = ["serde"] }
creep = "0.2"
bincode = "1.3"
