[package]
name = "vintage_network"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86" }
# vintage
vintage_msg = { path = "../vintage_msg" }
tokio = { version = "1.28", features = ["full"] }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde_yaml = "0.9"
log = { version = "0.4.21" }