[package]
name = "vintage_network"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86" }
async-trait = { version = "0.1.80" }
tokio = { version = "1.28", features = ["full"] }
bytes = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }
tokio-util = { version = "0.7", features = ["codec"] }
futures = { version = "0.3" }
serde_yaml = { version = "0.9" }
log = { version = "0.4.21" }
# vintage
vintage_msg = { path = "../vintage_msg" }
vintage_utils = { path = "../vintage_utils"}
