[package]
name = "vintage_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86" }
futures = { version = "0.3.30" }
redis = { version = "0.17.0", features = ["tokio-comp"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117" }
tokio = { version = "1.38.0" }
# vintage
vintage_msg = { path = "../vintage_msg" }
vintage_blockchain = { path = "../vintage_blockchain" }
vintage_utils = { path = "../vintage_utils" }
