[package]
name = "vintage_state"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86" }
log = { version = "0.4.21" }
redb = { version = "1.5.1" }
sha2 = { version = "0.10.8" }
tokio = { version = "1.38.0" }
# vintage
vintage_blockchain = { path = "../vintage_blockchain" }
vintage_msg = { path = "../vintage_msg" }
vintage_utils = { path = "../vintage_utils" }
serde = { version = "1.0.203", features = ["derive"] }
