[package]
name = "vintage_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
log = { version = "0.4.21" }
redb = { version = "1.5.1" }
serde = { version = "1.0.203" }
tokio = { version = "1.38.0", features = ["full"]  }
time = { version = "0.3.36" }
