[package]
name = "vintage_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86" }
async-trait = { version = "0.1.80" }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytes = { version = "1.1" }
digest = { version = "0.10.7" }
log = { version = "0.4.21" }
redb = { version = "1.5.1" }
serde = { version = "1.0.203" }
sha2 = { version = "0.10.8" }
tokio = { version = "1.38.0", features = ["full"]  }
time = { version = "0.3.36" }
uuid = { version = "1.8.0", features = ["v4"] }
